# W806

./: README.md  gcc_csky.ld  wm_it.c
blink/: CMakeLists.txt
blink/src/: main.c  wm_hal_msp.c
